[surefire] Add jdk.attach.allowAttachSelf mainly for jmockit